--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -6,8 +6,8 @@ file.reference.jaudiotagger-3.0.1.jar=D:\\code\\SWP\\Th\u01b0 vi\u1ec7n\\jaudiot
 file.reference.jstl-1.2.jar=D:\\code\\SWP\\Th\u01b0 vi\u1ec7n\\jstl-1.2.jar
 file.reference.mssql-jdbc-12.6.1.jre11.jar=D:\\code\\SWP\\Th\u01b0 vi\u1ec7n\\mssql-jdbc-12.6.1.jre11.jar
 file.reference.org.json-1.6-20240205.jar=D:\\code\\SWP\\Th\u01b0 vi\u1ec7n\\org.json-1.6-20240205.jar
-j2ee.server.home=D:/SWP/apache-tomcat-10.1.41
-j2ee.server.instance=tomcat90:home=D:\\SWP\\apache-tomcat-10.1.41
+j2ee.server.home=D:/apache-tomcat-10.1.43
+j2ee.server.instance=tomcat90:home=D:\\apache-tomcat-10.1.43
 javac.debug=true
 javadoc.preview=true
 selected.browser=default
