--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -26,14 +26,37 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.war=${dist.dir}/${war.name}
 endorsed.classpath=
 excludes=
+file.reference.activation-1.1.1.jar=D:\\code\\SWP\\Th\u01b0 vi\u1ec7n\\activation-1.1.1.jar
+file.reference.barcodes-7.1.9.jar=D:\\code\\SWP\\Th\u01b0 vi\u1ec7n\\barcodes-7.1.9.jar
+file.reference.font-asian-7.1.9.jar=D:\\code\\SWP\\Th\u01b0 vi\u1ec7n\\font-asian-7.1.9.jar
+file.reference.forms-7.1.9.jar=D:\\code\\SWP\\Th\u01b0 vi\u1ec7n\\forms-7.1.9.jar
+file.reference.httpclient5-5.1.4.jar=D:\\code\\SWP\\Th\u01b0 vi\u1ec7n\\httpclient5-5.1.4.jar
+file.reference.httpcore5-5.1.5.jar=D:\\code\\SWP\\Th\u01b0 vi\u1ec7n\\httpcore5-5.1.5.jar
+file.reference.hyph-7.1.9.jar=D:\\code\\SWP\\Th\u01b0 vi\u1ec7n\\hyph-7.1.9.jar
+file.reference.io-7.1.9.jar=D:\\code\\SWP\\Th\u01b0 vi\u1ec7n\\io-7.1.9.jar
+file.reference.jackson-annotations-2.15.3.jar=D:\\code\\SWP\\Th\u01b0 vi\u1ec7n\\jackson-annotations-2.15.3.jar
+file.reference.jackson-core-2.15.3.jar=D:\\code\\SWP\\Th\u01b0 vi\u1ec7n\\jackson-core-2.15.3.jar
+file.reference.jackson-databind-2.15.3.jar=D:\\code\\SWP\\Th\u01b0 vi\u1ec7n\\jackson-databind-2.15.3.jar
+file.reference.jackson-datatype-jsr310-2.4.0.jar=D:\\code\\SWP\\Th\u01b0 vi\u1ec7n\\jackson-datatype-jsr310-2.4.0.jar
 file.reference.jakarta.servlet-api-5.0.0.jar=D:\\code\\SWP\\Th\u01b0 vi\u1ec7n\\jakarta.servlet-api-5.0.0.jar
 file.reference.jakarta.servlet.jsp.jstl-3.0.1.jar=C:\\Users\\acer\\Desktop\\jars\\jakarta.servlet.jsp.jstl-3.0.1.jar
 file.reference.jakarta.servlet.jsp.jstl-api-3.0.0.jar=C:\\Users\\acer\\Desktop\\jars\\jakarta.servlet.jsp.jstl-api-3.0.0.jar
 file.reference.jaudiotagger-2.0.3.jar=C:\\Users\\acer\\Desktop\\jars\\jaudiotagger-2.0.3.jar
 file.reference.jaudiotagger-3.0.1.jar=C:\\Users\\acer\\Desktop\\jars\\jaudiotagger-3.0.1.jar
+file.reference.javax.mail.jar=D:\\code\\SWP\\Th\u01b0 vi\u1ec7n\\javax.mail.jar
 file.reference.jstl-1.2.jar=C:\\Users\\acer\\Desktop\\jars\\jstl-1.2.jar
+file.reference.kernel-7.1.9.jar=D:\\code\\SWP\\Th\u01b0 vi\u1ec7n\\kernel-7.1.9.jar
+file.reference.layout-7.1.9.jar=D:\\code\\SWP\\Th\u01b0 vi\u1ec7n\\layout-7.1.9.jar
 file.reference.mssql-jdbc-12.6.1.jre11.jar=C:\\Users\\acer\\Desktop\\jars\\mssql-jdbc-12.6.1.jre11.jar
 file.reference.org.json-1.6-20240205.jar=C:\\Users\\acer\\Desktop\\jars\\org.json-1.6-20240205.jar
+file.reference.payos-java-1.0.3.jar=D:\\code\\SWP\\Th\u01b0 vi\u1ec7n\\payos-java-1.0.3.jar
+file.reference.pdfa-7.1.9.jar=D:\\code\\SWP\\Th\u01b0 vi\u1ec7n\\pdfa-7.1.9.jar
+file.reference.pdftest-7.1.9.jar=D:\\code\\SWP\\Th\u01b0 vi\u1ec7n\\pdftest-7.1.9.jar
+file.reference.sign-7.1.9.jar=D:\\code\\SWP\\Th\u01b0 vi\u1ec7n\\sign-7.1.9.jar
+file.reference.slf4j-api-2.0.12.jar=D:\\code\\SWP\\Th\u01b0 vi\u1ec7n\\slf4j-api-2.0.12.jar
+file.reference.slf4j-simple-2.0.12.jar=D:\\code\\SWP\\Th\u01b0 vi\u1ec7n\\slf4j-simple-2.0.12.jar
+file.reference.styled-xml-parser-7.1.9.jar=D:\\code\\SWP\\Th\u01b0 vi\u1ec7n\\styled-xml-parser-7.1.9.jar
+file.reference.svg-7.1.9.jar=D:\\code\\SWP\\Th\u01b0 vi\u1ec7n\\svg-7.1.9.jar
 file.reference.WareNexus_WarehouseIntegrated-src=src
 includes=**
 j2ee.compile.on.save=true
@@ -52,7 +75,30 @@ javac.classpath=\
     ${file.reference.jstl-1.2.jar}:\
     ${file.reference.mssql-jdbc-12.6.1.jre11.jar}:\
     ${file.reference.org.json-1.6-20240205.jar}:\
-    ${file.reference.jakarta.servlet-api-5.0.0.jar}
+    ${file.reference.jakarta.servlet-api-5.0.0.jar}:\
+    ${file.reference.activation-1.1.1.jar}:\
+    ${file.reference.barcodes-7.1.9.jar}:\
+    ${file.reference.font-asian-7.1.9.jar}:\
+    ${file.reference.forms-7.1.9.jar}:\
+    ${file.reference.httpclient5-5.1.4.jar}:\
+    ${file.reference.httpcore5-5.1.5.jar}:\
+    ${file.reference.hyph-7.1.9.jar}:\
+    ${file.reference.io-7.1.9.jar}:\
+    ${file.reference.jackson-annotations-2.15.3.jar}:\
+    ${file.reference.jackson-core-2.15.3.jar}:\
+    ${file.reference.jackson-databind-2.15.3.jar}:\
+    ${file.reference.jackson-datatype-jsr310-2.4.0.jar}:\
+    ${file.reference.javax.mail.jar}:\
+    ${file.reference.kernel-7.1.9.jar}:\
+    ${file.reference.layout-7.1.9.jar}:\
+    ${file.reference.payos-java-1.0.3.jar}:\
+    ${file.reference.pdfa-7.1.9.jar}:\
+    ${file.reference.pdftest-7.1.9.jar}:\
+    ${file.reference.sign-7.1.9.jar}:\
+    ${file.reference.slf4j-api-2.0.12.jar}:\
+    ${file.reference.slf4j-simple-2.0.12.jar}:\
+    ${file.reference.styled-xml-parser-7.1.9.jar}:\
+    ${file.reference.svg-7.1.9.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
